--- a/vignettes/wrapping-apis.Rmd
+++ b/vignettes/wrapping-apis.Rmd
@@ -494,6 +494,19 @@ nytimes_books <- function(path, ..., api_key = get_api_key()) {
 }
 ```
 
+You can make this approach a little more user friendly by providing a helper that set's the environment variable:
+
+```{r}
+set_api_key <- function(key = NULL) {
+  if (is.null(key)) {
+    key <- askpass::askpass("Please enter your API key")
+  }
+  Sys.setenv("NYTIMES_KEY" = key)
+}
+```
+
+Using askpass (or similar) here is good practice since you don't want to encourage the user to type their secret key into the console, as mentioned above.
+
 It's a good idea to extend `get_api_key()` to automatically use your encrypted key to make it easier to write tests:
 
 ```{r}
