--- a/README.Rmd
+++ b/README.Rmd
@@ -103,5 +103,5 @@ resp %>% resp_body_html()
 
 ## Acknowledgements
 
-httr2 wouldn't be possible without [curl](https://jeroen.cran.dev/curl/), [openssl](https://github.com/jeroen/openssl/), [jsonlite](https://jeroen.cran.dev/jsonlite/), and [jose](https://github.com/jeroen/jose/), which are all maintained by [Jeroen Ooms](https://github.com/jeroen).
+httr2 wouldn't be possible without [curl](https://jeroen.cran.dev/curl/), [openssl](https://github.com/jeroen/openssl/), [jsonlite](https://jeroen.cran.dev/jsonlite/), and [jose](https://github.com/r-lib/jose/), which are all maintained by [Jeroen Ooms](https://github.com/jeroen).
 A big thanks also go to [Jenny Bryan](https://jennybryan.org) and [Craig Citro](https://research.google/people/CraigCitro/) who have given me much useful feedback on the both design of the internals and the user facing API.
