--- a/vignettes/wrapping-apis.Rmd
+++ b/vignettes/wrapping-apis.Rmd
@@ -732,7 +732,7 @@ So after adding the data to request, I use `req_method()` to override the defaul
 ```{r}
 req <- req_gist(token) %>% 
   req_url_path_append(id) %>% 
-  req_body_json(list(description = "This is a lame gist")) %>% 
+  req_body_json(list(description = "This is a simple gist")) %>% 
   req_method("PATCH")
 req %>% req_dry_run()
 ```
