Separate req_body_json() interface
Now works with a complete object, while `req_body_form()` and `req_body_multipart()` take name-value pairs making it more clear that `req_body_json()` replaces and the other two modify.

Fixes #95. Fixes #115.

--- a/vignettes/httr2.Rmd
+++ b/vignettes/httr2.Rmd
@@ -95,7 +95,7 @@ For example, `req_body_form()` uses the encoding used when you submit a form fro
 
 ```{r}
 req %>%
-  req_body_form(list(x = "1", y = "a")) %>% 
+  req_body_form(x = "1", y = "a") %>% 
   req_dry_run()
 ```
 
@@ -103,7 +103,7 @@ And `req_body_multipart()` uses the multipart encoding which is particularly imp
 
 ```{r}
 req %>%
-  req_body_multipart(list(x = "1", y = "a")) %>% 
+  req_body_multipart(x = "1", y = "a") %>% 
   req_dry_run()
 ```
 
