--- a/vignettes/httr2.Rmd
+++ b/vignettes/httr2.Rmd
@@ -188,4 +188,4 @@ These include:
 
 -   `req_retry()` sets up a retry strategy so that if the request either fails or you get a transient HTTP error, it'll automatically retry after a short delay.
 
-For more details see their documentation, as well as examples of the usage in real APIs in `vignette("wrapping-apis.Rmd")`.
+For more details see their documentation, as well as examples of the usage in real APIs in `vignette("wrapping-apis")`.
