Introduce new cache_path() function + env var

--- a/vignettes/articles/oauth.Rmd
+++ b/vignettes/articles/oauth.Rmd
@@ -136,13 +136,13 @@ In some cases, you may want to save the token so that it's automatically used ac
 This is easy to do (just set `cache_disk = TRUE` in `req_oauth_auth_code()`) but you need to carefully consider the consequences of saving the user's credentials on disk.
 
 httr2 does the best it can to save these credentials securely.
-They are stored in a local cache directory (`rappdirs::user_cache_dir("httr2"))` that should only be accessible to the current user, and are encrypted so they will be hard for any package other than httr2 to read.
+They are stored in a local cache directory (`cache_path())` that should only be accessible to the current user, and are encrypted so they will be hard for any package other than httr2 to read.
 However, there's no way to prevent other R code from using httr2 to access them, so if you do choose to cache tokens, you should inform the user and give them the ability to opt-out.
 
 You can see which clients have cached tokens by looking in the cache directory used by httr2:
 
 ```{r}
-dir(rappdirs::user_cache_dir("httr2"), recursive = TRUE)
+dir(cache_path(), recursive = TRUE)
 ```
 
 httr2 automatically deletes any cached tokens that are older than 30 days whenever it's loaded.
